--- a/AdminPage/src/main/resources/application.properties
+++ b/AdminPage/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8081
-server.context-path=/storeownerportal
+server.port=8082
+server.context-path=/admin
 spring.thymeleaf.cache=false
 # ===============================
 # = DATA SOURCE
