--- a/FPT Book Store/src/main/resources/application.properties
+++ b/FPT Book Store/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.thymeleaf.cache=false
 #        DATA SOURCE
 #==========================
 #Set configurations for the database connection
-spring.datasource.url=jdbc:mysql://us-cdbr-east-06.cleardb.net:3306/heroku_3ec710fc34f757e
+spring.datasource.url=jdbc:mysql://localhost:3306/fpt-bookstore
 #Username and secret
-spring.datasource.username=b95e77ad349888
-spring.datasource.password=81b43cbe
+spring.datasource.username=root
+spring.datasource.password=060423082001aA
 #Keep the connection alive if idle for a long time (needed in production)
 spring.datasource.tomcat.test-while-idle=true
 spring.datasource.tomcat.validation-query=SELECT 1
