--- a/Store Owner/src/main/resources/application.properties
+++ b/Store Owner/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.datasource.tomcat.validation-query=SELECT 1
 #Use spring.jpa.properties.* for Hibernate native properties
 #Show or not log for each sql query
 spring.jpa.show-sql=true
-#Hibernate ddl auto (create, crate-drop, update): with "update" the database schema will be automatically updated arcordingly to java entities found in the project
+#Hibernate ddl auto (create, crate-drop, update): with "update" the database schema will be automatically updated accordingly to java entities found in the project
 spring.jpa.hibernate.ddl-auto=update
 #Allows To Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
